corrected nav z-indexing issue, updated default width

--- a/elements.less
+++ b/elements.less
@@ -26,12 +26,12 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.5;
 }
 
-h1 { font-size: calc(var(--headline-size) * 2.2);}
-h2 { font-size: calc(var(--headline-size) * 1.6);}
-h3 { font-size: calc(var(--headline-size) * 1.4);}
-h4 { font-size: calc(var(--headline-size) * 1.2);}
-h5 { font-size: calc(var(--headline-size) * 1.1);}
-h6 { font-size: calc(var(--headline-size) * 1);}
+h1 { font-size: calc(var(--headline-base) * 2.2);}
+h2 { font-size: calc(var(--headline-base) * 1.6);}
+h3 { font-size: calc(var(--headline-base) * 1.4);}
+h4 { font-size: calc(var(--headline-base) * 1.2);}
+h5 { font-size: calc(var(--headline-base) * 1.1);}
+h6 { font-size: calc(var(--headline-base) * 1);}
 
 p {
     @p-margin-bottom: 1em;
@@ -53,6 +53,10 @@ button {
 img {
     max-width: 100%;
     height: auto;
+}
+
+nav {
+    z-index: 99;
 }
 
 a {
